<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:paddingHorizontal="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_desc"
        app:layout_constraintBottom_toBottomOf="@+id/textEt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textEt" />

    <EditText
        android:id="@+id/textEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/textTx"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSpeedTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_speed_desc"
        app:layout_constraintBottom_toBottomOf="@+id/textSpeedEt"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textSpeedEt" />

    <EditText
        android:id="@+id/textSpeedEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_speed_hint"
        android:inputType="number"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/textSpeedTx"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEt" />

    <TextView
        android:id="@+id/textSizeTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_size_desc"
        app:layout_constraintBottom_toBottomOf="@+id/textSizeEt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textSizeEt" />

    <EditText
        android:id="@+id/textSizeEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_size_hint"
        android:inputType="number"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/textSizeTx"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSpeedEt" />


    <Button
        android:id="@+id/textColorBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/change_color"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/previewBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/previewBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/preview"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>